# flight-emulator-project

./: Cargo.toml  README.md  Ravedude.toml  pyproject.toml  rust-analyzer.toml
.cargo/: config.toml
.zed/: flash-controller-1.nu  flash-controller-2.nu  flash-controllers-and-run.nu  tasks.json
app/: main.py
app/dashboard/: app.py  data.py
app/test/: generate_telemetry.py
data/: live.csv  telemetry.csv
docs/: proposal.md
docs/report/: main.typ
docs/report/rsc/figures/: project_control_flow.drawio
docs/report/rsc/tables/: hardware_BOM.typ  language_selection_matrix.typ  primary_flight_instruments.typ
docs/report/sec/: 1_introduction.typ  2_background.typ  3_methods.typ  4_conclusion.typ  4_design.typ  5_challanges.typ  6_results.typ  7_conclusion.typ  _appendix.typ
docs/report/utils/: preamble.typ  reference.bib
src/: lib.rs  main.rs
src/components/: displays.rs  mod.rs  motors.rs
src/gauges/: mod.rs
