[package]
name = "flight-emulator-project"
version = "0.1.0"
authors = ["kenyi"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "flight_emulator_project"
path = "src/lib.rs"
test = false
bench = false

[[bin]]
name = "flight-emulator-project"
test = false
bench = false

[[bin]]
name = "controller-1"
path = "src/bin/controller_1.rs"
test = false
bench = false

[[bin]]
name = "controller-2"
path = "src/bin/controller_2.rs"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
hd44780-driver = "0.4.0"
itoa = "1.0.18"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[package.metadata.ravedude]
port = "/dev/ttyUSB0"
